# web-grabber

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
docs/: GIT_WORKFLOW.md
scripts/: bump_version.py  setup_hooks.py
src/: camoufox
src/web_grabber/: __init__.py  __main__.py  web_grabber.py
src/web_grabber/cmd/: __init__.py  grab.py  scrape.py
src/web_grabber/cmd/grab/: __init__.py  grab.py  grab_handler.py
src/web_grabber/lib/: __init__.py  camoufox_handler.py  selenium_handler.py  spoofing_config.py  tor_handler.py
src/web_grabber/lib/browser_automation/: __init__.py  base.py
src/web_grabber/lib/browser_automation/camoufox_handler/: __init__.py  camoufox_handler.py  spoofing_config.py
src/web_grabber/lib/browser_automation/selenium_handler/: __init__.py  selenium_handler.py
src/web_grabber/lib/browser_automation/standard_handler/: standard_handler.py
src/web_grabber/lib/network/: __init__.py  base.py
src/web_grabber/lib/network/http_handler/: __init__.py  http_handler.py
src/web_grabber/lib/network/standard_handler/: __init__.py  standard_handler.py
src/web_grabber/lib/network/tor_handler/: __init__.py  tor_handler.py
