[project]
name = "web-grabber"
version = "0.5.8"
description = "Add your description here"
authors = [
    { name = "Tadeas Fort", email = "business@tadeasfort.com" }
]
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "typer>=0.15.2",
    "selenium>=4.29.0",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "PySocks>=1.7.1",
    "urllib3>=1.26.12",
    "rich>=12.6.0",
    # For CLI enhancements
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
web-grabber = "web_grabber.web_grabber:app"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
]
