[project]
name = "web-grabber"
version = "0.5.42"
description = "A powerful CLI tool for crawling websites and downloading content including HTML, images, and videos. Features multiple browsing modes including normal requests, Selenium for JavaScript rendering, and camoufox for anti-bot protection."
authors = [
    { name = "Tadeas Fort", email = "business@tadeasfort.com" }
]
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "typer>=0.15.2",
    "selenium>=4.29.0",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "PySocks>=1.7.1",
    "urllib3>=1.26.12",
    "rich>=12.6.0",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
web-grabber = "web_grabber.web_grabber:app"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.15",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the isort (`I`) codes.
select = ["E", "F", "I", "W", "N"]
# Ignore specific errors
ignore = ["E501", "W291", "W293", "N812"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[rye.scripts]
bump-version = "python scripts/bump_version.py"
pre-commit = "pre-commit run --all-files"